; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_cache.c_read_raw.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_cache.c_read_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demux_cache = type { i64, i32 }

@.str = private unnamed_addr constant [31 x i8] c"Failed to read cache file: %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [26 x i8] c"Could not read all data.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.demux_cache*, i8*, i64)* @read_raw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_raw(%struct.demux_cache* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.demux_cache*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.demux_cache* %0, %struct.demux_cache** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load %struct.demux_cache*, %struct.demux_cache** %5, align 8
  %10 = getelementptr inbounds %struct.demux_cache, %struct.demux_cache* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i64 @read(i32 %11, i8* %12, i64 %13)
  store i64 %14, i64* %8, align 8
  %15 = load i64, i64* %8, align 8
  %16 = icmp ult i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %3
  %18 = load %struct.demux_cache*, %struct.demux_cache** %5, align 8
  %19 = load i32, i32* @errno, align 4
  %20 = call i32 @mp_strerror(i32 %19)
  %21 = call i32 (%struct.demux_cache*, i8*, ...) @MP_ERR(%struct.demux_cache* %18, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %20)
  store i32 0, i32* %4, align 4
  br label %35

22:                                               ; preds = %3
  %23 = load i64, i64* %8, align 8
  %24 = load %struct.demux_cache*, %struct.demux_cache** %5, align 8
  %25 = getelementptr inbounds %struct.demux_cache, %struct.demux_cache* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = add i64 %26, %23
  store i64 %27, i64* %25, align 8
  %28 = load i64, i64* %8, align 8
  %29 = load i64, i64* %7, align 8
  %30 = icmp ne i64 %28, %29
  br i1 %30, label %31, label %34

31:                                               ; preds = %22
  %32 = load %struct.demux_cache*, %struct.demux_cache** %5, align 8
  %33 = call i32 (%struct.demux_cache*, i8*, ...) @MP_ERR(%struct.demux_cache* %32, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %35

34:                                               ; preds = %22
  store i32 1, i32* %4, align 4
  br label %35

35:                                               ; preds = %34, %31, %17
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i64 @read(i32, i8*, i64) #1

declare dso_local i32 @MP_ERR(%struct.demux_cache*, i8*, ...) #1

declare dso_local i32 @mp_strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
